turned Data2 from int to float

--- a/cross_entropy_btw_supernovae.ipynb
+++ b/cross_entropy_btw_supernovae.ipynb
@@ -36,7 +36,7 @@
         "collapsed": true,
         "id": "UOPa0lzRgSmB"
       },
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -50,7 +50,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fDWY7G441fHM",
-        "outputId": "8aa20f55-c212-442d-cfe2-8628c383c11c"
+        "outputId": "224ad1b8-3cbe-4ba8-ce40-5b75e23f89df"
       },
       "execution_count": 2,
       "outputs": [
@@ -97,8 +97,340 @@
       "metadata": {
         "id": "4O7xMpFqEqTR"
       },
-      "execution_count": 23,
+      "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Data2.astype(float)"
+      ],
+      "metadata": {
+        "id": "iesf5oetUrFf",
+        "outputId": "8c76ddcf-660b-4415-a99c-f5c4d7d59286",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        ...,\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]]],\n",
+              "\n",
+              "\n",
+              "       [[[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        ...,\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]]],\n",
+              "\n",
+              "\n",
+              "       [[[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        ...,\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]]],\n",
+              "\n",
+              "\n",
+              "       ...,\n",
+              "\n",
+              "\n",
+              "       [[[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        ...,\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]]],\n",
+              "\n",
+              "\n",
+              "       [[[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        ...,\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]]],\n",
+              "\n",
+              "\n",
+              "       [[[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        ...,\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         ...,\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.],\n",
+              "         [0., 0., 0., ..., 0., 0., 0.]]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -117,7 +449,7 @@
       "metadata": {
         "id": "MxzI18B8f57O"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -129,7 +461,7 @@
       "metadata": {
         "id": "7-7fKNFRg5nb"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -547,29 +879,29 @@
       "metadata": {
         "id": "5sYIQBxLktqm"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "part1[np.where(part1 == 0)] = 10 ** (-16)"
+        "part1[np.where(part1 == 0)] = 1.e-16"
       ],
       "metadata": {
         "id": "5rpjc1ySlCoA"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "part2[np.where(part2 == 0)] = 10 ** (-16)"
+        "part2[np.where(part2 == 0)] = 1.e-16"
       ],
       "metadata": {
         "id": "REiL2FU_lZHL"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -582,7 +914,7 @@
       "metadata": {
         "id": "4q7pkqepm_9A"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -599,7 +931,7 @@
           "height": 162
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -626,7 +958,7 @@
         "id": "HIc3cVe3mnIp",
         "outputId": "0c087ab5-4eb6-4663-bc63-98b91a81c292"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -650,7 +982,7 @@
       "metadata": {
         "id": "uFaD6cvgn6YR"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     }
   ],
