--- a/cross_entropy_btw_supernovae.ipynb
+++ b/cross_entropy_btw_supernovae.ipynb
@@ -50,9 +50,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fDWY7G441fHM",
-        "outputId": "224ad1b8-3cbe-4ba8-ce40-5b75e23f89df"
+        "outputId": "436dec2c-485a-42cb-9fc6-21c445c923a8"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -76,7 +76,7 @@
       "metadata": {
         "id": "YW0PP-D7BDba"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -97,7 +97,7 @@
       "metadata": {
         "id": "4O7xMpFqEqTR"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -106,13 +106,14 @@
         "Data2.astype(float)"
       ],
       "metadata": {
-        "id": "iesf5oetUrFf",
-        "outputId": "8c76ddcf-660b-4415-a99c-f5c4d7d59286",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "collapsed": true,
+        "id": "iesf5oetUrFf",
+        "outputId": "d00faf5e-70bc-4e34-db57-be45cd8ee70b"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -428,7 +429,63 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(len(Data2[0]))\n",
+        "print(len(Data2[0][0]))\n",
+        "print(len(Data2[0][0][0]))"
+      ],
+      "metadata": {
+        "id": "x6Y5-Z6r6dRd",
+        "outputId": "37e256c8-5246-4bbf-a569-30eec5ad24fa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3603\n",
+            "110\n",
+            "38\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(len(CoordinateDict2['dT1s']))\n",
+        "print(len(CoordinateDict2['dT2s']))\n",
+        "print(len(CoordinateDict2['BinMag']))\n",
+        "print(len(CoordinateDict2['BinColor']))"
+      ],
+      "metadata": {
+        "id": "y1Nv-EHh5Kq_",
+        "outputId": "8d55d22d-cc5e-495e-f253-9cd8ef179a3a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "65\n",
+            "67\n",
+            "111\n",
+            "39\n"
+          ]
         }
       ]
     },
@@ -436,14 +493,12 @@
       "cell_type": "code",
       "source": [
         "def normalize(data):\n",
-        "  for i in range(len(data)):\n",
-        "    for j in range(len(data[0])):\n",
-        "      for k in range(len(data[0][0])):\n",
-        "        total = sum(data[i][j][k])\n",
-        "        if (total != 0):\n",
-        "          factor = 1 / total\n",
-        "          for l in range(len(data[0][0][0])):\n",
-        "            data[i][j][k][l] *= factor\n",
+        "  total = 0\n",
+        "\n",
+        "  # dT1s\n",
+        "  num1 = len(CoordinateDict2['dT1s'])\n",
+        "  dx = CoordinateDict2['dT1s'][1] - CoordinateDict2['dT1s'][0]\n",
+        "\n",
         "  return None"
       ],
       "metadata": {
