determined structure of Data2

--- a/cross_entropy_btw_supernovae.ipynb
+++ b/cross_entropy_btw_supernovae.ipynb
@@ -50,9 +50,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fDWY7G441fHM",
-        "outputId": "436dec2c-485a-42cb-9fc6-21c445c923a8"
+        "outputId": "bbbad21b-bfab-407c-c6b3-b21ecd05520c"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -76,7 +76,7 @@
       "metadata": {
         "id": "YW0PP-D7BDba"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -97,7 +97,7 @@
       "metadata": {
         "id": "4O7xMpFqEqTR"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -111,9 +111,9 @@
         },
         "collapsed": true,
         "id": "iesf5oetUrFf",
-        "outputId": "d00faf5e-70bc-4e34-db57-be45cd8ee70b"
+        "outputId": "1b2e5670-3c89-48bd-b78f-7c2dd26a3585"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -429,33 +429,29 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "print(len(Data2[0]))\n",
-        "print(len(Data2[0][0]))\n",
-        "print(len(Data2[0][0][0]))"
+        "print(Data2.shape)"
       ],
       "metadata": {
         "id": "x6Y5-Z6r6dRd",
-        "outputId": "37e256c8-5246-4bbf-a569-30eec5ad24fa",
+        "outputId": "d28ee609-8477-4a5c-f1da-8e63b482e609",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "3603\n",
-            "110\n",
-            "38\n"
+            "(28, 3603, 110, 38)\n"
           ]
         }
       ]
@@ -463,26 +459,30 @@
     {
       "cell_type": "code",
       "source": [
+        "print(len(CoordinateDict2['BandPairs']))\n",
         "print(len(CoordinateDict2['dT1s']))\n",
         "print(len(CoordinateDict2['dT2s']))\n",
+        "print(len(CoordinateDict2['dT1s']) * len(CoordinateDict2['dT2s']))\n",
         "print(len(CoordinateDict2['BinMag']))\n",
         "print(len(CoordinateDict2['BinColor']))"
       ],
       "metadata": {
         "id": "y1Nv-EHh5Kq_",
-        "outputId": "8d55d22d-cc5e-495e-f253-9cd8ef179a3a",
+        "outputId": "290f4e6e-acc8-42a1-8615-de9b7cbe98b3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "28\n",
             "65\n",
             "67\n",
+            "4355\n",
             "111\n",
             "39\n"
           ]
