--- a/cross_entropy_btw_supernovae.ipynb
+++ b/cross_entropy_btw_supernovae.ipynb
@@ -50,7 +50,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fDWY7G441fHM",
-        "outputId": "bbbad21b-bfab-407c-c6b3-b21ecd05520c"
+        "outputId": "0f6fd7e2-74a2-4813-b04a-5de836ebbe66"
       },
       "execution_count": 2,
       "outputs": [
@@ -111,7 +111,7 @@
         },
         "collapsed": true,
         "id": "iesf5oetUrFf",
-        "outputId": "1b2e5670-3c89-48bd-b78f-7c2dd26a3585"
+        "outputId": "1814f965-60be-4ce6-dbc4-49a78be9b3dc"
       },
       "execution_count": 5,
       "outputs": [
@@ -436,21 +436,24 @@
     {
       "cell_type": "code",
       "source": [
-        "print(Data2.shape)"
+        "print(Data1.shape)\n",
+        "print(Data2.shape)\n",
+        "shape = Data2.shape"
       ],
       "metadata": {
         "id": "x6Y5-Z6r6dRd",
-        "outputId": "d28ee609-8477-4a5c-f1da-8e63b482e609",
+        "outputId": "aefb542d-9729-4ff9-88cb-b8a32ab2234b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "(28, 3603, 110, 38)\n",
             "(28, 3603, 110, 38)\n"
           ]
         }
@@ -493,18 +496,29 @@
       "cell_type": "code",
       "source": [
         "def normalize(data):\n",
+        "\n",
         "  total = 0\n",
         "\n",
-        "  # dT1s\n",
-        "  num1 = len(CoordinateDict2['dT1s'])\n",
-        "  dx = CoordinateDict2['dT1s'][1] - CoordinateDict2['dT1s'][0]\n",
+        "  for i in range(shape[0]):\n",
+        "    for j in range(shape[1]):\n",
+        "      for k in range(shape[2]):\n",
+        "        for l in range(shape[3]):\n",
+        "          total += data[i][j][k][l]\n",
+        "\n",
+        "  factor = 1 / total\n",
+        "\n",
+        "  for i in range(shape[0]):\n",
+        "    for j in range(shape[1]):\n",
+        "      for k in range(shape[2]):\n",
+        "        for l in range(shape[3]):\n",
+        "          data[i][j][k][l] *= factor\n",
         "\n",
         "  return None"
       ],
       "metadata": {
         "id": "MxzI18B8f57O"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -516,7 +530,7 @@
       "metadata": {
         "id": "7-7fKNFRg5nb"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -928,35 +942,47 @@
     {
       "cell_type": "code",
       "source": [
-        "part1 = Data2[:14]\n",
-        "part2 = Data2[14:]"
+        "part1 = Data2[:10]\n",
+        "part2 = Data2[10:20]\n",
+        "part3 = Data2[20:]"
       ],
       "metadata": {
         "id": "5sYIQBxLktqm"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "part1[np.where(part1 == 0)] = 1.e-16"
+        "part1[np.where(part1 == 0.)] = 1.e-16"
       ],
       "metadata": {
         "id": "5rpjc1ySlCoA"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "part2[np.where(part2 == 0)] = 1.e-16"
+        "part2[np.where(part2 == 0.)] = 1.e-16"
       ],
       "metadata": {
         "id": "REiL2FU_lZHL"
       },
-      "execution_count": null,
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "part3[np.where(part3 == 0.)] = 1.e-16"
+      ],
+      "metadata": {
+        "id": "bqTxkGzsAHhp"
+      },
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -964,42 +990,29 @@
       "source": [
         "for i in range(len(part1)):\n",
         "  Data2[i] = part1[i]\n",
-        "  Data2[14+i] = part2[i]"
+        "  Data2[10+i] = part2[i]\n",
+        "\n",
+        "for j in range(len(part3)):\n",
+        "  Data2[20+j] = part3[j]"
       ],
       "metadata": {
         "id": "4q7pkqepm_9A"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "del part1\n",
-        "del part2"
+        "del part2\n",
+        "del part3"
       ],
       "metadata": {
-        "id": "MYIwBik1mi_d",
-        "outputId": "3ebdde72-560f-4a11-ed80-5664f5ea26b4",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 162
-        }
+        "id": "MYIwBik1mi_d"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'part1' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-31-cfa7a7b04a7c>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mdel\u001b[0m \u001b[0mpart1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mdel\u001b[0m \u001b[0mpart2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'part1' is not defined"
-          ]
-        }
-      ]
+      "execution_count": 14,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1011,17 +1024,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HIc3cVe3mnIp",
-        "outputId": "0c087ab5-4eb6-4663-bc63-98b91a81c292"
+        "outputId": "950fd7cf-7b22-444e-dd01-695e2859a96e"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-32-f9dd387c4ab2>:1: RuntimeWarning: divide by zero encountered in log\n",
+            "<ipython-input-15-f9dd387c4ab2>:1: RuntimeWarning: divide by zero encountered in log\n",
             "  H1 = Data1 * np.log(Data2)\n",
-            "<ipython-input-32-f9dd387c4ab2>:1: RuntimeWarning: invalid value encountered in multiply\n",
+            "<ipython-input-15-f9dd387c4ab2>:1: RuntimeWarning: invalid value encountered in multiply\n",
             "  H1 = Data1 * np.log(Data2)\n"
           ]
         }
@@ -1037,7 +1050,7 @@
       "metadata": {
         "id": "uFaD6cvgn6YR"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     }
   ],
